crates/postgres-import/tests/snapshots/reader__copy_data_requires_its_exact_terminator.snap
---
source: crates/postgres-import/tests/reader.rs
expression: result.err().map(|error| error.to_string())
---
Some(
    "COPY FROM STDIN beginning on line 1 has no \\. terminator",
)
