crates/postgres-import/tests/snapshots/reader__copy_options_that_change_data_framing_are_rejected.snap
---
source: crates/postgres-import/tests/reader.rs
expression: "inspect_plain_dump(Cursor::new(input)).err().map(|error| error.to_string())"
---
Some(
    "unsupported COPY mode or options on line 1",
)
