crates/postgres-import/tests/snapshots/reader__nested_comments_dollar_quotes_and_crlf_are_framed.snap
---
source: crates/postgres-import/tests/reader.rs
expression: "inspect_plain_dump(Cursor::new(input))?"
---
DumpSummary {
    statements: 3,
    meta_commands: 0,
    copy_rows: 1,
    connections: [],
    encodings: [],
}
