crates/postgres-import/tests/snapshots/reader__postgres_parser_marks_security_definer_functions.snap
---
source: crates/postgres-import/tests/reader.rs
expression: options
---
[
    (
        "language",
        None,
    ),
    (
        "security",
        Some(
            true,
        ),
    ),
    (
        "as",
        None,
    ),
]
