crates/postgres-import/tests/snapshots/reader__regular_file_format_is_detected_from_contents.snap
---
source: crates/postgres-import/tests/reader.rs
expression: results
---
[
    (
        "17.11 plain",
        Plain,
    ),
    (
        "17.11 custom",
        Custom,
    ),
    (
        "17.11 tar",
        Tar,
    ),
    (
        "18.6 plain",
        Plain,
    ),
    (
        "18.6 custom",
        Custom,
    ),
    (
        "18.6 tar",
        Tar,
    ),
]
