crates/postgres-import/tests/snapshots/reader__restriction_key_must_match_and_close.snap
---
source: crates/postgres-import/tests/reader.rs
expression: errors
---
[
    Some(
        "psql restriction key on line 2 is missing or mismatched",
    ),
    Some(
        "psql restriction beginning before line 2 is not closed",
    ),
    Some(
        "psql restriction key on line 1 is missing or mismatched",
    ),
    Some(
        "psql restriction key on line 2 is missing or mismatched",
    ),
]
