crates/postgres-import/tests/snapshots/reader__very_large_copy_row_does_not_hit_statement_limit.snap
---
source: crates/postgres-import/tests/reader.rs
expression: inspect_plain_dump(header.chain(row).chain(end))?
---
DumpSummary {
    statements: 2,
    meta_commands: 0,
    copy_rows: 1,
    connections: [],
    encodings: [],
}
